--- a/config/kyria_rev3.conf
+++ b/config/kyria_rev3.conf
@@ -8,3 +8,6 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 # Uncomment the following lines to enable RGB underglow
 # CONFIG_ZMK_RGB_UNDERGLOW=y
 # CONFIG_WS2812_STRIP=y
+
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY y
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING y
